test/bench/error/no_registration_bench.lua
-- Benchmark file that doesn't register any specs
-- This file loads but doesn't define any benchmarks
local measure = require('measure')

-- No benchmark definitions here
print("File loaded but no benchmarks defined")
